--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!doctype html>
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+    <hl>Top level page heading,/hl>
+    <p>This text is in paragraph tag</p>
+    <button id="btnAlert" onClick="alert('This is an alert');">
+     Click me</button>
+  </body>
+ </html>
